@@ -1,0 +1,6 @@
+{
+     "parent": "item/handheld",
+    "textures": {
+        "layer0": "mmorpg:items/uniques/hammer/nature_ele_hammer0"
+    }
+}
